add manual ops alpha batch creation flow
